# AoC23

./: CMakeLists.txt  main.cpp  readme.md
infra/: Task.cpp  Task.h
tasks/: Day01.cpp  Day01.h  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.h  Day06.h  Day07.h  Day08.h  Day09.h  Day1.cpp  Day1.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day19.h  Day2.cpp  Day2.h
